--- a/index.html
+++ b/index.html
@@ -16,44 +16,91 @@
             <div class="logo">
                 <img src="images/logo/fixbuddy-logo.svg" alt="FixBuddy - Your DIY Home Repair Guide" height="60">
             </div>
+            <button class="mobile-menu-toggle">
+                <i class="fas fa-bars"></i>
+            </button>
             <nav class="main-nav">
-                <div class="dropdown">
-                    <button class="dropbtn">Plumbing Repairs <i class="fas fa-chevron-down"></i></button>
+                <div class="category-dropdown">
+                    <button class="category-btn">
+                        <i class="fas fa-wrench"></i>
+                        Plumbing
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
                     <div class="dropdown-content">
-                        <a href="pages/fix-leaky-faucet.html">Fix Leaky Faucet</a>
-                        <a href="pages/unclog-drain.html">Unclog Drain</a>
-                        <a href="pages/fix-running-toilet.html">Fix Running Toilet</a>
-                        <a href="pages/fix-low-pressure.html">Fix Low Water Pressure</a>
+                        <a href="pages/plumbing/leaky-faucet.html">Leaky Faucet</a>
+                        <a href="pages/plumbing/clogged-drain.html">Clogged Drain</a>
+                        <a href="pages/plumbing/running-toilet.html">Running Toilet</a>
+                        <a href="pages/plumbing/leaky-pipe.html">Leaky Pipe</a>
+                        <a href="pages/plumbing/low-pressure.html">Low Water Pressure</a>
                     </div>
                 </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Furniture Repairs <i class="fas fa-chevron-down"></i></button>
+
+                <div class="category-dropdown">
+                    <button class="category-btn">
+                        <i class="fas fa-plug"></i>
+                        Electrical
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
                     <div class="dropdown-content">
-                        <a href="pages/fix-wobbly-chair.html">Fix Wobbly Chair</a>
-                        <a href="pages/restore-wood-furniture.html">Restore Wood Furniture</a>
-                        <a href="pages/reattach-chair-legs.html">Reattach Chair Legs</a>
+                        <a href="pages/electrical/light-switch.html">Light Switch Issues</a>
+                        <a href="pages/electrical/outlet-repair.html">Outlet Not Working</a>
+                        <a href="pages/electrical/ceiling-fan.html">Ceiling Fan Problems</a>
+                        <a href="pages/electrical/circuit-breaker.html">Circuit Breaker</a>
                     </div>
                 </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Floor & Wall <i class="fas fa-chevron-down"></i></button>
+
+                <div class="category-dropdown">
+                    <button class="category-btn">
+                        <i class="fas fa-couch"></i>
+                        Furniture
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
                     <div class="dropdown-content">
-                        <a href="pages/fix-squeaky-floor.html">Fix Squeaky Floor</a>
-                        <a href="pages/repair-tile-grout.html">Repair Tile Grout</a>
-                        <a href="pages/fix-carpet-stains.html">Fix Carpet Stains</a>
+                        <a href="pages/furniture/wobbly-table.html">Wobbly Table/Chair</a>
+                        <a href="pages/furniture/drawer-repair.html">Stuck Drawer</a>
+                        <a href="pages/furniture/cabinet-hinge.html">Cabinet Hinge</a>
+                        <a href="pages/furniture/chair-repair.html">Chair Repairs</a>
                     </div>
                 </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Electrical <i class="fas fa-chevron-down"></i></button>
+
+                <div class="category-dropdown">
+                    <button class="category-btn">
+                        <i class="fas fa-door-open"></i>
+                        Doors & Windows
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
                     <div class="dropdown-content">
-                        <a href="pages/fix-loose-outlet.html">Fix Loose Outlet</a>
-                        <a href="pages/repair-ceiling-fan.html">Repair Ceiling Fan</a>
-                        <a href="pages/replace-light-switch.html">Replace Light Switch</a>
+                        <a href="pages/doors/squeaky-hinge.html">Squeaky Hinge</a>
+                        <a href="pages/doors/stuck-window.html">Stuck Window</a>
+                        <a href="pages/doors/door-lock.html">Door Lock Issues</a>
+                        <a href="pages/doors/window-seal.html">Window Seal</a>
+                    </div>
+                </div>
+
+                <div class="category-dropdown">
+                    <button class="category-btn">
+                        <i class="fas fa-tools"></i>
+                        Appliances
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="pages/appliances/washer-repair.html">Washer Problems</a>
+                        <a href="pages/appliances/dryer-repair.html">Dryer Not Working</a>
+                        <a href="pages/appliances/dishwasher.html">Dishwasher Issues</a>
+                    </div>
+                </div>
+
+                <div class="category-dropdown">
+                    <button class="category-btn">
+                        <i class="fas fa-layer-group"></i>
+                        Flooring
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="pages/flooring/general-repairs.html">Flooring Repairs</a>
                     </div>
                 </div>
             </nav>
-            <button id="mobile-menu-btn" class="mobile-menu-btn" aria-label="Toggle mobile menu">
-                <i class="fas fa-bars"></i>
-            </button>
         </div>
     </header>
 
@@ -67,149 +114,64 @@
 
         <section class="categories">
             <div class="grid">
-                <!-- Furniture Category -->
-                <div class="category-card animate-fade-in" data-repair-id="furniture">
+                <!-- Plumbing Category -->
+                <div class="category-card animate-fade-in" data-repair-id="plumbing">
                     <div class="category-icon">
-                        <i class="fas fa-couch"></i>
+                        <i class="fas fa-wrench"></i>
                     </div>
-                    <h3>Furniture Fixes</h3>
-                    <p>Repair and restore your furniture to its former glory</p>
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="pages/fix-wobbly-chair.html" class="nav-link" data-tooltip="15-30 minutes repair">
-                                <i class="fas fa-chair"></i> Fix Wobbly Chair
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/repair-scratches.html" class="nav-link" data-tooltip="20-40 minutes repair">
-                                <i class="fas fa-paint-brush"></i> Repair Scratches
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/reattach-chair-legs.html" class="nav-link" data-tooltip="30-45 minutes repair">
-                                <i class="fas fa-wrench"></i> Reattach Chair Legs
-                            </a>
-                        </li>
-                    </ul>
-                    <button class="favorite-button" onclick="addToFavorites('furniture')" aria-label="Add to favorites">
-                        <i class="far fa-heart"></i>
-                    </button>
+                    <h3>Plumbing</h3>
+                    <p>Fix common plumbing issues like leaky faucets, clogged drains, and running toilets.</p>
+                    <a href="pages/plumbing/leaky-faucet.html" class="btn">View Guides</a>
                 </div>
 
                 <!-- Electrical Category -->
                 <div class="category-card animate-fade-in" data-repair-id="electrical">
                     <div class="category-icon">
-                        <i class="fas fa-bolt"></i>
+                        <i class="fas fa-plug"></i>
                     </div>
-                    <h3>Electrical Fixes</h3>
-                    <p>Safe solutions for common electrical problems</p>
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="pages/replace-light-switch.html" class="nav-link" data-tooltip="15-30 minutes repair">
-                                <i class="fas fa-toggle-on"></i> Replace Light Switch
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/fix-loose-outlet.html" class="nav-link" data-tooltip="20-40 minutes repair">
-                                <i class="fas fa-plug"></i> Fix Loose Outlet
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/reset-circuit-breaker.html" class="nav-link" data-tooltip="30-45 minutes repair">
-                                <i class="fas fa-power-off"></i> Reset Circuit Breaker
-                            </a>
-                        </li>
-                    </ul>
-                    <button class="favorite-button" onclick="addToFavorites('electrical')" aria-label="Add to favorites">
-                        <i class="far fa-heart"></i>
-                    </button>
+                    <h3>Electrical</h3>
+                    <p>Safely repair light switches, outlets, and other electrical problems.</p>
+                    <a href="pages/electrical/light-switch.html" class="btn">View Guides</a>
                 </div>
 
-                <!-- Plumbing Category -->
-                <div class="category-card animate-fade-in" data-repair-id="plumbing">
+                <!-- Furniture Category -->
+                <div class="category-card animate-fade-in" data-repair-id="furniture">
                     <div class="category-icon">
-                        <i class="fas fa-faucet"></i>
+                        <i class="fas fa-couch"></i>
                     </div>
-                    <h3>Plumbing Issues</h3>
-                    <p>Solutions for leaks, clogs, and water pressure problems</p>
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="pages/fix-leaky-faucet.html" class="nav-link" data-tooltip="15-30 minutes repair">
-                                <i class="fas fa-tint"></i> Fix Leaky Faucet
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/unclog-drain.html" class="nav-link" data-tooltip="20-40 minutes repair">
-                                <i class="fas fa-water"></i> Unclog Drain
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/fix-running-toilet.html" class="nav-link" data-tooltip="30-45 minutes repair">
-                                <i class="fas fa-toilet"></i> Fix Running Toilet
-                            </a>
-                        </li>
-                    </ul>
-                    <button class="favorite-button" onclick="addToFavorites('plumbing')" aria-label="Add to favorites">
-                        <i class="far fa-heart"></i>
-                    </button>
+                    <h3>Furniture</h3>
+                    <p>Fix wobbly chairs, stuck drawers, and other furniture issues.</p>
+                    <a href="pages/furniture/wobbly-table.html" class="btn">View Guides</a>
+                </div>
+
+                <!-- Doors & Windows Category -->
+                <div class="category-card animate-fade-in" data-repair-id="doors">
+                    <div class="category-icon">
+                        <i class="fas fa-door-open"></i>
+                    </div>
+                    <h3>Doors & Windows</h3>
+                    <p>Repair squeaky hinges, stuck windows, and door lock problems.</p>
+                    <a href="pages/doors/squeaky-hinge.html" class="btn">View Guides</a>
+                </div>
+
+                <!-- Appliances Category -->
+                <div class="category-card animate-fade-in" data-repair-id="appliances">
+                    <div class="category-icon">
+                        <i class="fas fa-tools"></i>
+                    </div>
+                    <h3>Appliances</h3>
+                    <p>Troubleshoot and fix common appliance problems.</p>
+                    <a href="pages/appliances/washer-repair.html" class="btn">View Guides</a>
                 </div>
 
                 <!-- Flooring Category -->
                 <div class="category-card animate-fade-in" data-repair-id="flooring">
                     <div class="category-icon">
-                        <i class="fas fa-border-all"></i>
+                        <i class="fas fa-layer-group"></i>
                     </div>
-                    <h3>Flooring Problems</h3>
-                    <p>Repair and maintain different types of flooring</p>
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="pages/fix-squeaky-floor.html" class="nav-link" data-tooltip="15-30 minutes repair">
-                                <i class="fas fa-volume-up"></i> Fix Squeaky Floor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/repair-laminate-floor.html" class="nav-link" data-tooltip="20-40 minutes repair">
-                                <i class="fas fa-layer-group"></i> Repair Laminate Floor
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/fix-carpet-stains.html" class="nav-link" data-tooltip="30-45 minutes repair">
-                                <i class="fas fa-brush"></i> Fix Carpet Stains
-                            </a>
-                        </li>
-                    </ul>
-                    <button class="favorite-button" onclick="addToFavorites('flooring')" aria-label="Add to favorites">
-                        <i class="far fa-heart"></i>
-                    </button>
-                </div>
-
-                <!-- Doors & Windows Category -->
-                <div class="category-card animate-fade-in" data-repair-id="doors-windows">
-                    <div class="category-icon">
-                        <i class="fas fa-door-open"></i>
-                    </div>
-                    <h3>Door & Window Repairs</h3>
-                    <p>Fix common door and window problems</p>
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="pages/fix-squeaky-door.html" class="nav-link" data-tooltip="15-30 minutes repair">
-                                <i class="fas fa-door-closed"></i> Fix Squeaky Door
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/fix-stuck-window.html" class="nav-link" data-tooltip="20-40 minutes repair">
-                                <i class="fas fa-window-maximize"></i> Fix Stuck Window
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pages/fix-door-lock.html" class="nav-link" data-tooltip="30-45 minutes repair">
-                                <i class="fas fa-lock"></i> Fix Door Lock
-                            </a>
-                        </li>
-                    </ul>
-                    <button class="favorite-button" onclick="addToFavorites('doors-windows')" aria-label="Add to favorites">
-                        <i class="far fa-heart"></i>
-                    </button>
+                    <h3>Flooring</h3>
+                    <p>Fix squeaky floors, loose tiles, and carpet issues.</p>
+                    <a href="pages/flooring/general-repairs.html" class="btn">View Guides</a>
                 </div>
             </div>
         </section>
@@ -218,29 +180,10 @@
     <footer class="footer">
         <div class="footer-content">
             <p>&copy; 2024 FixBuddy - Your DIY Home Repair Guide</p>
-            <a href="#" class="btn">Back to Top</a>
         </div>
     </footer>
 
-    <!-- Mobile Menu Button -->
-    <button class="mobile-menu-button" aria-label="Toggle mobile menu">
-        <i class="fas fa-bars"></i>
-    </button>
-
-    <!-- Mobile Menu -->
-    <div class="mobile-menu">
-        <nav>
-            <ul>
-                <li><a href="pages/furniture-fixes.html">Furniture Fixes</a></li>
-                <li><a href="pages/electrical-fixes.html">Electrical Fixes</a></li>
-                <li><a href="pages/plumbing-issues.html">Plumbing Issues</a></li>
-                <li><a href="pages/door-window-repairs.html">Door & Window</a></li>
-                <li><a href="pages/flooring-problems.html">Flooring Problems</a></li>
-            </ul>
-        </nav>
-    </div>
-
     <script src="js/main.js"></script>
-    <script src="js/search.js"></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
