--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="dropdown-content">
-                        <a href="pages/furniture/wobbly-table.html">Wobbly Table/Chair</a>
-                        <a href="pages/furniture/drawer-repair.html">Stuck Drawer</a>
-                        <a href="pages/furniture/cabinet-hinge.html">Cabinet Hinge</a>
-                        <a href="pages/furniture/chair-repair.html">Chair Repairs</a>
+                        <a href="pages/furniture/wood-care.html">Wood Care</a>
+                        <a href="pages/furniture/upholstery-care.html">Upholstery Care</a>
+                        <a href="pages/furniture/leather-care.html">Leather Care</a>
+                        <a href="pages/furniture/metal-care.html">Metal Furniture Care</a>
                     </div>
                 </div>
 
@@ -120,13 +120,13 @@
                         <i class="fas fa-wrench"></i>
                     </div>
                     <h3>Plumbing</h3>
-                    <p>Regular maintenance can prevent costly repairs:</p>
+                    <p>Preventive Maintenance Tips:</p>
                     <ul class="maintenance-tips">
-                        <li><i class="fas fa-check"></i> Check for leaks monthly</li>
-                        <li><i class="fas fa-check"></i> Clean drains regularly</li>
-                        <li><i class="fas fa-check"></i> Monitor water pressure</li>
+                        <li><i class="fas fa-check"></i> Inspect pipes seasonally</li>
+                        <li><i class="fas fa-check"></i> Run water in unused sinks</li>
+                        <li><i class="fas fa-check"></i> Test water pressure annually</li>
                     </ul>
-                    <a href="pages/plumbing/leaky-faucet.html" class="btn">Repair Guides</a>
+                    <a href="pages/plumbing/leaky-faucet.html" class="btn">Maintenance Guides</a>
                 </div>
 
                 <!-- Electrical Category -->
@@ -135,13 +135,13 @@
                         <i class="fas fa-plug"></i>
                     </div>
                     <h3>Electrical</h3>
-                    <p>Important safety reminders:</p>
+                    <p>Safety & Maintenance:</p>
                     <ul class="maintenance-tips">
-                        <li><i class="fas fa-exclamation-triangle"></i> Always turn off power first</li>
-                        <li><i class="fas fa-check"></i> Test outlets monthly</li>
-                        <li><i class="fas fa-check"></i> Check for warm outlets/switches</li>
+                        <li><i class="fas fa-exclamation-triangle"></i> Schedule professional inspections</li>
+                        <li><i class="fas fa-check"></i> Keep areas dust-free</li>
+                        <li><i class="fas fa-check"></i> Monitor unusual sounds/smells</li>
                     </ul>
-                    <a href="pages/electrical/light-switch.html" class="btn">Repair Guides</a>
+                    <a href="pages/electrical/light-switch.html" class="btn">Maintenance Guides</a>
                 </div>
 
                 <!-- Furniture Category -->
@@ -150,13 +150,13 @@
                         <i class="fas fa-couch"></i>
                     </div>
                     <h3>Furniture</h3>
-                    <p>Preventive care tips:</p>
+                    <p>Care Guidelines:</p>
                     <ul class="maintenance-tips">
-                        <li><i class="fas fa-check"></i> Tighten screws quarterly</li>
-                        <li><i class="fas fa-check"></i> Clean upholstery regularly</li>
-                        <li><i class="fas fa-check"></i> Rotate cushions monthly</li>
+                        <li><i class="fas fa-check"></i> Rotate mattresses seasonally</li>
+                        <li><i class="fas fa-check"></i> Vacuum upholstery monthly</li>
+                        <li><i class="fas fa-check"></i> Polish wood quarterly</li>
                     </ul>
-                    <a href="pages/furniture/wobbly-table.html" class="btn">Repair Guides</a>
+                    <a href="pages/furniture/wood-care.html" class="btn">Maintenance Guides</a>
                 </div>
 
                 <!-- Doors & Windows Category -->
@@ -165,13 +165,13 @@
                         <i class="fas fa-door-open"></i>
                     </div>
                     <h3>Doors & Windows</h3>
-                    <p>Regular maintenance checklist:</p>
+                    <p>Preventive Care:</p>
                     <ul class="maintenance-tips">
-                        <li><i class="fas fa-check"></i> Lubricate hinges every 6 months</li>
-                        <li><i class="fas fa-check"></i> Check weatherstripping</li>
-                        <li><i class="fas fa-check"></i> Clean window tracks</li>
+                        <li><i class="fas fa-check"></i> Clean tracks monthly</li>
+                        <li><i class="fas fa-check"></i> Inspect seals seasonally</li>
+                        <li><i class="fas fa-check"></i> Oil hinges twice yearly</li>
                     </ul>
-                    <a href="pages/doors/squeaky-hinge.html" class="btn">Repair Guides</a>
+                    <a href="pages/doors/squeaky-hinge.html" class="btn">Maintenance Guides</a>
                 </div>
 
                 <!-- Appliances Category -->
@@ -180,13 +180,13 @@
                         <i class="fas fa-tools"></i>
                     </div>
                     <h3>Appliances</h3>
-                    <p>Essential maintenance tasks:</p>
+                    <p>Regular Maintenance:</p>
                     <ul class="maintenance-tips">
-                        <li><i class="fas fa-check"></i> Clean filters monthly</li>
-                        <li><i class="fas fa-check"></i> Check hoses for leaks</li>
-                        <li><i class="fas fa-check"></i> Clear vents regularly</li>
+                        <li><i class="fas fa-check"></i> Clean coils quarterly</li>
+                        <li><i class="fas fa-check"></i> Replace filters regularly</li>
+                        <li><i class="fas fa-check"></i> Check seals monthly</li>
                     </ul>
-                    <a href="pages/appliances/washer-repair.html" class="btn">Repair Guides</a>
+                    <a href="pages/appliances/washer-repair.html" class="btn">Maintenance Guides</a>
                 </div>
 
                 <!-- Flooring Category -->
@@ -195,13 +195,13 @@
                         <i class="fas fa-layer-group"></i>
                     </div>
                     <h3>Flooring</h3>
-                    <p>Care and maintenance tips:</p>
+                    <p>Care Instructions:</p>
                     <ul class="maintenance-tips">
-                        <li><i class="fas fa-check"></i> Clean spills immediately</li>
-                        <li><i class="fas fa-check"></i> Use proper cleaning products</li>
-                        <li><i class="fas fa-check"></i> Inspect grout lines regularly</li>
+                        <li><i class="fas fa-check"></i> Vacuum/sweep regularly</li>
+                        <li><i class="fas fa-check"></i> Use furniture pads</li>
+                        <li><i class="fas fa-check"></i> Maintain proper humidity</li>
                     </ul>
-                    <a href="pages/flooring/general-repairs.html" class="btn">Repair Guides</a>
+                    <a href="pages/flooring/general-repairs.html" class="btn">Maintenance Guides</a>
                 </div>
             </div>
         </section>
